--- a/composer.json
+++ b/composer.json
@@ -2,28 +2,28 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "http://wpackagist.org"
+      "url": "https://wpackagist.org"
     },
     {
       "type": "package",
       "package": {
         "name": "wordpress",
         "type": "webroot",
-        "version": "4.1.1",
+        "version": "4.6.1",
         "dist": {
           "type": "zip",
-          "url": "https://github.com/WordPress/WordPress/archive/4.1.1.zip"
+          "url": "https://github.com/WordPress/WordPress/archive/4.6.1.zip"
         },
         "require": {
-          "fancyguy/webroot-installer": "1.0.0"
+          "fancyguy/webroot-installer": "1.1.0"
         }
       }
     }
   ],
   "require": {
     "php": ">=5.3.0",
-    "wordpress": "4.1.1",
-    "fancyguy/webroot-installer": "1.0.0"
+    "wordpress": "4.6.1",
+    "fancyguy/webroot-installer": "1.1.0"
   },
   "extra": {
     "webroot-dir": "public/wp",
